# syntheon

./: LICENSE  Parameter_Inference.ipynb  README.md  Syntheon_Demo.ipynb  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
converter/: __init__.py  converter.py
converter/dexed/: dexed_constants.py  dexed_converter.py
converter/vital/: vital_converter.py
inferencer/: inferencer.py
inferencer/dexed/: dexed_inferencer.py
inferencer/dexed/checkpoints/: state_best.pth
inferencer/dexed/models/: preprocessor.py
inferencer/dexed/models/conf/: data_config.yaml
inferencer/dexed/models/conf/recipes/: README.md  config.yaml
inferencer/dexed/models/conf/recipes/model/: hpn_baseline.yaml  tcnres_f0ld_fmbrss.yaml  tcnres_f0ld_fmstr.yaml  tcnres_f0ld_fmstr_noreverb.yaml
inferencer/dexed/models/ddx7/: models.py  spectral_ops.py  synth.py
inferencer/vital/: config.yaml  init.vital  vital_inferencer.py
inferencer/vital/models/: adsr_envelope.py  core.py  model.py  preprocessor.py  utils.py  wavetable_synth.py
syntheon/: __init__.py  main.py  version.py
syntheon/converter/dexed/: dexed_constants.py  dexed_converter.py
syntheon/converter/vital/: vital_constants.py  vital_converter.py
syntheon/inferencer/: inferencer.py
syntheon/inferencer/dexed/: Dexed_01.syx  dexed_inferencer.py
syntheon/inferencer/dexed/models/: amp_utils.py  preprocessor.py
syntheon/inferencer/dexed/models/conf/recipes/hyperparams/: ddx7.yaml  hpn.yaml
syntheon/inferencer/dexed/models/ddx7/: core.py  loss_functions.py  models.py  spectral_ops.py  synth.py
syntheon/inferencer/dexed/models/ddx7/data_utils/: h5_dataset.py  preprocessor.py
syntheon/inferencer/vital/: init.vital  vital_inferencer.py
syntheon/inferencer/vital/models/: adsr_envelope.py  core.py  model.py  model_v2.py  preprocessor.py  wavetable_synth.py
syntheon/utils/: pitch_extractor.py
test/: test_inferencer.py
(+6 files in other folders)
