[metadata]
name = syntheon
version = attr: syntheon.version.version
description = Parameter inference of music synthesizers to simplify sound design process.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/gudgud96/syntheon
author = Hao Hao Tan
author_email = helloharry66@gmail.com

[options]
packages = find:
include_package_data = True
install_requires =
    librosa 
    tensorflow 
    torch==1.12.1
    torchvision==0.13.1
    mido 
    crepe==0.0.12 
    hmmlearn==0.2.7 
    nnAudio==0.3.1 
    numpy 
    bitstruct 
    torchcrepe 
    torchcrepeV2

python_requires = >=3.7

[options.package_data]
* = inferencer/vital/checkpoints/model.pt, inferencer/vital/config.yaml, inferencer/vital/init.vital, inferencer/dexed/models/conf/recipes/model/tcnres_f0ld_fmstr_noreverb.yaml, inferencer/dexed/models/conf/recipes/models/conf/data_config.yaml